--- a/HTML:CSS kunstwerk/VID-CSS.css
+++ b/HTML:CSS kunstwerk/VID-CSS.css
@@ -6,13 +6,16 @@ body    {
     height: 60vh;
 }
 
+/*Desktop*/
 
-
+@media (max-width:800em){
+    
 /*SVG*/
 
 svg{
-    width: 50vw;
-    transform: scale(0.60)
+    width: 30vw;
+    cursor: pointer;
+
 }
 
 svg > g#ring1{
@@ -72,6 +75,10 @@ svg > g#ring10{
 }
 
 
+
+
+
+
 /*TEKST*/
 
 p:nth-child(1) {
@@ -79,21 +86,24 @@ p:nth-child(1) {
     font-family: "avenir";
     font-size: 2em;
     font-weight: 600;
-    position: absolute;
-  left:29em;
-  top:17em;
+    
+     position: absolute;
+    left:54%;
+    bottom:30%;
     
     
 }
+
 
 p:nth-child(2) {
     color: black;
     font-family: "avenir";
     font-size: 2em;
     font-weight: 600;
+   
     position: absolute;
-  left:33em;
-  top:17em;
+    left:61%;
+    bottom:30%;
     
 }
 
@@ -103,9 +113,10 @@ p:nth-child(3) {
     font-family: "avenir";
     font-size: 13px;
     font-weight: 100;
+   
     position: absolute;
-  left:45em;
-  top:45.3em;
+  left:36%;
+  bottom:30.5%;
     
 }
 
@@ -115,8 +126,8 @@ p:nth-child(4) {
     font-size: 13px;
     font-weight: 100;
     position: absolute;
-  left:48em;
-  top:46.3em;
+  left:38%;
+  bottom:28.5%;
     
 }
 
@@ -126,8 +137,8 @@ p:nth-child(5) {
     font-size: 13px;
     font-weight: 100;
     position: absolute;
-  left:51em;
-  top:47.3em;
+  left:40%;
+  bottom:26.5%;
     
 }
 
@@ -137,8 +148,8 @@ p:nth-child(6) {
     font-size: 13px;
     font-weight: 100;
     position: absolute;
-  left:54em;
-  top:50.3em;
+  left:44%;
+  bottom:23.5%;
     
 }
 
@@ -148,8 +159,8 @@ p:nth-child(7) {
     font-size: 13px;
     font-weight: 100;
     position: absolute;
-  left:57em;
-  top:51.3em;
+  left:46%;
+  bottom:21.5%;
     
 }
 
@@ -159,8 +170,8 @@ p:nth-child(8) {
     font-size: 13px;
     font-weight: 100;
     position: absolute;
-  left:60em;
-  top:52.3em;
+    left:48%;
+    bottom:19.5%;
     
     
 }
@@ -171,8 +182,8 @@ p:nth-child(9) {
     font-size: 13px;
     font-weight: 100;
      position: absolute;
-  left:63em;
-  top:55.3em;
+  left:52%;
+  bottom:16.5%;
     
 }
 
@@ -182,8 +193,8 @@ p:nth-child(10) {
     font-size: 13px;
     font-weight: 100;
      position: absolute;
-  left:66em;
-  top:56.3em;
+  left:54%;
+  bottom:14.5%;
     
     
 }
@@ -192,11 +203,11 @@ p:nth-child(10) {
 p:nth-child(11) {
     color: black;
     font-family: "avenir";
-    font-size: 10px;
+    font-size: 7px;
     font-weight: 600;
      position: absolute;
-  left:101.5em;
-  top:80em;
+  left:66%;
+  bottom:12.5%;
     
     
 }
@@ -204,11 +215,11 @@ p:nth-child(11) {
 p:nth-child(12) {
     color: black;
     font-family: "avenir";
-    font-size: 10px;
+    font-size: 7px;
     font-weight: 600;
      position: absolute;
-  left:79em;
-  top:81em;
+  left:56%;
+  bottom:11.5%;
     
     
 }
@@ -216,11 +227,11 @@ p:nth-child(12) {
 p:nth-child(13) {
     color: black;
     font-family: "avenir";
-    font-size: 6px;
+    font-size: 4px;
     font-weight: 700;
      position: absolute;
-  left:143em;
-  top:148em;
+  left:48.5%;
+  bottom:9%;
     
     
 }
@@ -228,17 +239,735 @@ p:nth-child(13) {
 p:nth-child(14) {
     color: black;
     font-family: "avenir";
-    font-size: 6px;
+    font-size: 4px;
     font-weight: 700;
     position: absolute;
-  left:128em;
-  top:148em;
+  left:51.5%;
+  bottom:9%;
     
     
 }
 
-.animate{
-    animation: rotate 2s;
+    .schuifTransition {
+      transition: 1s;
+      transition-timing-function: ease-in-out;
+    }
+    
+    
+.schuif1{
+      transform: translateX(22.5em);
+   
+    }
+    
+.schuif2{
+      transform: translateX(-9.3em);
+    
+    }
+.schuif3{
+      transform: translateX(18em);
+
+    }
+.schuif4{
+      transform: translateX(.5em);
+
+    }
+.schuif5{
+      transform: translateX(8.5em);
+
+    }
+
+.schuif6{
+      transform: translateX(-1em);
+
+    }
+
+.schuif7{
+      transform: translateX(-5em);
+
+    }
+.schuif8{
+      transform: translateX(-17em);
+ 
+    }
+.schuif9{
+      transform: translateX(-24.5em);
+
+    }
+    
+.schuif10{
+      transform: translateX(-35em);
+
+    }
+.schuif11{
+      transform: translateX(-35em);
+    }
+
+    }
+        
+    
+
+
+/*Ipad Pro*/
+
+@media (max-width:768px){
+    
+    svg{
+        width: 70vw;}
+    
+    
+ p:nth-child(1) {
+    color: black;
+    font-family: "avenir";
+    font-size: 2em;
+    font-weight: 600;
+    
+     position: absolute;
+    left:58%;
+    bottom:30%;
+    
+    
+}
+
+
+p:nth-child(2) {
+    color: black;
+    font-family: "avenir";
+    font-size: 2em;
+    font-weight: 600;
+   
+    position: absolute;
+    left:73%;
+    bottom:30%;
+    
+}
+
+
+p:nth-child(3) {
+    color: darkred;
+    font-family: "avenir";
+    font-size: 13px;
+    font-weight: 100;
+   
+    position: absolute;
+    left:14%;
+    bottom:29.5%;
+    
+}
+
+p:nth-child(4) {
+    color: darkred;
+    font-family: "avenir";
+    font-size: 13px;
+    font-weight: 100;
+    position: absolute;
+  left:17.5%;
+  bottom:27.5%;
+    
+}
+
+p:nth-child(5) {
+    color: darkred;
+    font-family: "avenir";
+    font-size: 13px;
+    font-weight: 100;
+    position: absolute;
+  left:21%;
+  bottom:25.5%;
+    
+}
+
+p:nth-child(6) {
+    color: darkred;
+    font-family: "avenir";
+    font-size: 13px;
+    font-weight: 100;
+    position: absolute;
+  left:24.5%;
+  bottom:22.5%;
+    
+}
+
+p:nth-child(7) {
+    color: darkred;
+    font-family: "avenir";
+    font-size: 13px;
+    font-weight: 100;
+    position: absolute;
+  left:28%;
+  bottom:20.5%;
+    
+}
+
+p:nth-child(8) {
+    color: darkred;
+    font-family: "avenir";
+    font-size: 13px;
+    font-weight: 100;
+    position: absolute;
+    left:31.5%;
+    bottom:18.5%;
+    
+    
+}
+
+p:nth-child(9) {
+    color: darkred;
+    font-family: "avenir";
+    font-size: 13px;
+    font-weight: 100;
+     position: absolute;
+  left:35%;
+  bottom:15.5%;
+    
+}
+
+p:nth-child(10) {
+    color: darkred;
+    font-family: "avenir";
+    font-size: 13px;
+    font-weight: 100;
+     position: absolute;
+  left:38.5%;
+  bottom:13.5%;
+    
+    
+}
+
+
+p:nth-child(11) {
+    color: black;
+    font-family: "avenir";
+    font-size: 7px;
+    font-weight: 600;
+     position: absolute;
+  left:70%;
+  bottom:12.9%;
+    
+    
+}
+
+p:nth-child(12) {
+    color: black;
+    font-family: "avenir";
+    font-size: 7px;
+    font-weight: 600;
+     position: absolute;
+  left:46%;
+  bottom:12%;
+    
+    
+}
+
+p:nth-child(13) {
+    color: black;
+    font-family: "avenir";
+    font-size: 4px;
+    font-weight: 700;
+     position: absolute;
+  left:46.5%;
+  bottom:9%;
+    
+    
+}
+
+p:nth-child(14) {
+    color: black;
+    font-family: "avenir";
+    font-size: 4px;
+    font-weight: 700;
+    position: absolute;
+  left:53.5%;
+  bottom:9%;
+    
+    
+}
+
+.schuifTransition {
+      transition: 1s;
+      transition-timing-function: ease-in-out;
+    }
+    
+    
+.schuif1{
+      transform: translateX(20.5em);
+   
+    }
+    
+.schuif2{
+      transform: translateX(-9.3em);
+    
+    }
+.schuif3{
+      transform: translateX(17em);
+
+    }
+.schuif4{
+      transform: translateX(.5em);
+
+    }
+.schuif5{
+      transform: translateX(14.5em);
+
+    }
+
+.schuif6{
+      transform: translateX(6em);
+
+    }
+
+.schuif7{
+      transform: translateX(2.5em);
+
+    }
+.schuif8{
+      transform: translateX(-4.5em);
+ 
+    }
+.schuif9{
+      transform: translateX(-11em);
+
+    }
+    
+.schuif10{
+      transform: translateX(-15em);
+
+    }
+.schuif11{
+      transform: translateX(-18em);
+    }
+    
+}
+
+/*Iphone*/
+
+@media (max-width:375px){
+    
+     svg{
+        width: 80vw;
+        margin-top: -250px;
+    }
+    
+ p:nth-child(1) {
+    color: black;
+    font-family: "avenir";
+    font-size: 1.7em;
+    font-weight: 590;
+    position: absolute;
+    left: 49%;
+    bottom: 58%;
+    
+    
+}
+
+
+p:nth-child(2) {
+    color: black;
+    font-family: "avenir";
+    font-size: 1.7em;
+    font-weight: 590em;
+   
+    position: absolute;
+    left: 77%;
+    bottom: 58%;
+    
+}
+
+
+p:nth-child(3) {
+    color: darkred;
+    font-family: "avenir";
+    font-size: 10px;
+    font-weight: 100;
+   
+    position: absolute;
+    left:15%;
+    bottom:58%;
+    
+}
+
+p:nth-child(4) {
+    color: darkred;
+    font-family: "avenir";
+    font-size: 10px;
+    font-weight: 100;
+    position: absolute;
+  left:18%;
+  bottom:56.5%;
+    
+}
+
+p:nth-child(5) {
+    color: darkred;
+    font-family: "avenir";
+    font-size: 10px;
+    font-weight: 100;
+    position: absolute;
+  left:21%;
+  bottom:55%;
+    
+}
+
+p:nth-child(6) {
+    color: darkred;
+    font-family: "avenir";
+    font-size: 10px;
+    font-weight: 100;
+    position: absolute;
+  left:24%;
+  bottom:52.5%;
+    
+}
+
+p:nth-child(7) {
+    color: darkred;
+    font-family: "avenir";
+    font-size: 10px;
+    font-weight: 100;
+    position: absolute;
+  left:27%;
+  bottom:51%;
+    
+}
+
+p:nth-child(8) {
+    color: darkred;
+    font-family: "avenir";
+    font-size: 10px;
+    font-weight: 100;
+    position: absolute;
+    left:30%;
+    bottom:49.5%;
+    
+    
+}
+
+p:nth-child(9) {
+    color: darkred;
+    font-family: "avenir";
+    font-size: 10px;
+    font-weight: 100;
+     position: absolute;
+  left:33%;
+  bottom:47%;
+    
+}
+
+p:nth-child(10) {
+    color: darkred;
+    font-family: "avenir";
+    font-size: 10px;
+    font-weight: 100;
+     position: absolute;
+  left:36.5%;
+  bottom:45.5%;
+    
+    
+}
+
+
+p:nth-child(11) {
+    color: black;
+    font-family: "avenir";
+    font-size: 6px;
+    font-weight: 600;
+     position: absolute;
+  left:67.5%;
+  bottom:44%;
+    
+    
+}
+
+p:nth-child(12) {
+    color: black;
+    font-family: "avenir";
+    font-size: 6px;
+    font-weight: 600;
+     position: absolute;
+  left:36%;
+  bottom:42.5%;
+    
+    
+}
+
+p:nth-child(13) {
+    color: black;
+    font-family: "avenir";
+    font-size: 4px;
+    font-weight: 700;
+     position: absolute;
+  left:37%;
+  bottom:41%;
+    
+    
+}
+
+p:nth-child(14) {
+    color: black;
+    font-family: "avenir";
+    font-size: 4px;
+    font-weight: 700;
+    position: absolute;
+  left:51%;
+  bottom:41%;   
+}  
+    
+    
+.schuifTransition {
+      transition: 1s;
+      transition-timing-function: ease-in-out;
+    }
+    
+    
+.schuif1{
+      transform: translateX(13em);
+   
+    }
+    
+.schuif2{
+      transform: translateX(-5.5em);
+    
+    }
+.schuif3{
+      transform: translateX(11.5em);
+
+    }
+.schuif4{
+      transform: translateX(-4em);
+
+    }
+.schuif5{
+      transform: translateX(11.5em);
+
+    }
+
+.schuif6{
+      transform: translateX(4.5em);
+
+    }
+
+.schuif7{
+      transform: translateX(3em);
+
+    }
+.schuif8{
+      transform: translateX(-2.5em);
+ 
+    }
+.schuif9{
+      transform: translateX(-7.5em);
+
+    }
+    
+.schuif10{
+      transform: translateX(-32em);
+
+    }
+.schuif11{
+      transform: translateX(-12em);
+    }
+    
+}
+
+
+
+/*ANIMATIe*/
+    
+    
+svg > g#ring1{
+  animation: slidein 0.2s;
+}
+
+@keyframes slidein {
+  0% {
+    transform: translateY(-50em);
+    opacity: 0;
+     
+  }
+
+  100% {
+    transform: translateY(0em);
+    opacity: 1;
+  
+  }
+}
+
+svg > g#ring2{
+  animation: slidein 0.4s;
+}
+
+@keyframes slidein {
+  0% {
+    transform: translateY(-50em);
+    opacity: 0;
+     
+  }
+
+  100% {
+    transform: translateY(0em);
+    opacity: 1;
+  
+  }
+}
+
+svg > g#ring3{
+  animation: slidein 0.6s;
+}
+
+@keyframes slidein {
+  0% {
+    transform: translateY(-50em);
+    opacity: 0;
+     
+  }
+
+  100% {
+    transform: translateY(0em);
+    opacity: 1;
+  
+  }
+}
+
+svg > g#ring4{
+  animation: slidein .8s;
+}
+
+@keyframes slidein {
+  0% {
+    transform: translateY(-50em);
+    opacity: 0;
+     
+  }
+
+  100% {
+    transform: translateY(0em);
+    opacity: 1;
+  
+  }
+}
+
+svg > g#ring5{
+  animation: slidein 1s;
+}
+
+@keyframes slidein {
+  0% {
+    transform: translateY(-50em);
+    opacity: 0;
+     
+  }
+
+  100% {
+    transform: translateY(0em);
+    opacity: 1;
+  
+  }
+}
+
+svg > g#ring6{
+  animation: slidein 1.2s;
+}
+
+@keyframes slidein {
+  0% {
+    transform: translateY(-50em);
+    opacity: 0;
+     
+  }
+
+  100% {
+    transform: translateY(0em);
+    opacity: 1;
+  
+  }
+}
+
+    
+svg > g#ring7{
+  animation: slidein 1.4s;
+}
+
+@keyframes slidein {
+  0% {
+    transform: translateY(-50em);
+    opacity: 0;
+     
+  }
+
+  100% {
+    transform: translateY(0em);
+    opacity: 1;
+  
+  }
+}
+    
+svg > g#ring8{
+  animation: slidein 1.6s;
+}
+
+@keyframes slidein {
+  0% {
+    transform: translateY(-50em);
+    opacity: 0;
+     
+  }
+
+  100% {
+    transform: translateY(0em);
+    opacity: 1;
+  
+  }
+}
+    
+svg > g#ring9{
+  animation: slidein 1.8s;
+}
+
+@keyframes slidein {
+  0% {
+    transform: translateY(-50em);
+    opacity: 0;
+     
+  }
+
+  100% {
+    transform: translateY(0em);
+    opacity: 1;
+  
+  }
+}
+    
+svg > g#ring10{
+  animation: slidein 2s;
+}
+
+@keyframes slidein {
+  0% {
+    transform: translateY(-50em);
+    opacity: 0;
+     
+  }
+
+  100% {
+    transform: translateY(0em);
+    opacity: 1;
+  
+  }
+}
+    
+/*bron: milou nth-child optellen */
+ p:nth-child(-n+14)
+    {
+  
+animation: text-slidein 1s forwards;
+animation-delay: 1s;
+/*margin-left: 100%;*/
+}
+
+
+        
+    
+.turn{
+    animation: rotate 1.5s ;
 }
 
 @keyframes rotate {
@@ -248,13 +977,85 @@ p:nth-child(14) {
     
     100% {
         transform: rotate(360deg)
+        
+    }
+}
+    
+.aanschuiven{
+    cursor:pointer;
+}  
+
+/*Bron: https://css-tricks.com/almanac/properties/a/animation/*/
+    
+.gradient  {
+  animation: pulse 3s ease-in infinite;
+}
+
+@keyframes pulse {
+  0% {
+    background-color: #738440 ;
+    
+  }
+    
+    
+50% {
+    background-color: #954C4D;
+        
+    }  
+    
+100% {
+    background-color: #738440;
+        
+    }  
+}
+
+p:nth-child(-n+14) {
+    
+animation: opacitytext 10s;
+    
+    
+}
+
+@keyframes{
+    0%{
+        opacity:0;
+    }
+    100%{
+        opacity:1;
     }
 }
 
-article {
-  background-color: floralwhite;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80vh;      
+
+
+
+    .p{
+animation: kleur 6s ease-in  infinite;
+    }
+    
+@keyframes kleur {
+  0% {
+    color: #C36D4B; 
+    
+  }
+    
+  50% {
+    color: white; 
+    
+  }
+
+100% {
+   color: #C36D4B;
+        
 }
+    }
+
+.cls-10:hover{
+    
+    fill: #738440;
+           
+}
+
+    
+
+
+    
