--- a/VID-CSS.css
+++ b/VID-CSS.css
@@ -15,8 +15,16 @@ body    {
 svg{
     width: 30vw;
     cursor: pointer;
-
+           
 }
+
+    svg:hover{
+        
+    transition-timing-function: ease-in-out;
+    transform: scale(1.1);
+    }    
+    
+
 
 svg > g#ring1{
     fill: #954C4D;
@@ -302,7 +310,8 @@ p:nth-child(14) {
       transform: translateX(-35em);
     }
 
-    }
+}
+
         
     
 
@@ -540,10 +549,10 @@ p:nth-child(14) {
 
 /*Iphone*/
 
-@media (max-width:375px){
+@media (max-width:48em){
     
      svg{
-        width: 80vw;
+        width: 70vw;
         margin-top: -250px;
     }
     
@@ -953,16 +962,6 @@ svg > g#ring10{
   
   }
 }
-    
-/*bron: milou nth-child optellen */
- p:nth-child(-n+14)
-    {
-  
-animation: text-slidein 1s forwards;
-animation-delay: 1s;
-/*margin-left: 100%;*/
-}
-
 
         
     
@@ -988,16 +987,15 @@ animation-delay: 1s;
 /*Bron: https://css-tricks.com/almanac/properties/a/animation/*/
     
 .gradient  {
-  animation: pulse 3s ease-in infinite;
+  animation: achtergrondgradient 2s ease-in-out infinite;
 }
 
-@keyframes pulse {
+@keyframes achtergrondgradient {
   0% {
     background-color: #738440 ;
     
   }
-    
-    
+     
 50% {
     background-color: #954C4D;
         
@@ -1009,6 +1007,8 @@ animation-delay: 1s;
     }  
 }
 
+/*bron: milou nth-child optellen */
+
 p:nth-child(-n+14) {
     
 animation: opacitytext 10s;
@@ -1016,7 +1016,7 @@ animation: opacitytext 10s;
     
 }
 
-@keyframes{
+@keyframes opacitytext{
     0%{
         opacity:0;
     }
@@ -1028,11 +1028,11 @@ animation: opacitytext 10s;
 
 
 
-    .p{
-animation: kleur 6s ease-in  infinite;
+.p {
+animation: textTransition 3s infinite;
     }
     
-@keyframes kleur {
+@keyframes textTransition {
   0% {
     color: #C36D4B; 
     
@@ -1049,11 +1049,13 @@ animation: kleur 6s ease-in  infinite;
 }
     }
 
+/*
 .cls-10:hover{
     
     fill: #738440;
            
 }
+*/
 
     
 
